--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "next": "15.0.1",
     "react": "^18",
     "react-datepicker": "^7.5.0",
